# rainbow-tensor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  setup.py  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  index.md
docs/guide/: combining.md  indexing.md  reductions-and-math.md  reshaping.md  shapes.md  themes-and-configuration.md
examples/: 01_shapes.ipynb  02_indexing.ipynb  03_reshaping.ipynb  04_reductions_and_math.ipynb  05_combining.ipynb  06_themes_and_backends.ipynb  backend_arrays_demo.ipynb  big_tensor_demo.ipynb  broadcasting_demo.ipynb  combining_demo.ipynb  einsum_demo.ipynb  indexing_demo.ipynb  reshaping_demo.ipynb  shape_demo.ipynb  swapaxes_demo.ipynb
rainbow_tensor/: __init__.py
src/rainbow_tensor/: __init__.py  backends.py  config.py  einsum.py  explanations.py  indexing.py  layout.py  notebook.py  ops.py  render_svg.py  renderers.py  shape.py  theme.py  visual.py
src/rainbow_tensor/ops/: __init__.py  combining.py  einsum.py  reductions.py  reshaping.py
src/rainbow_tensor/views/: __init__.py  combining.py  einsum.py  reductions.py  reshaping.py  shapes.py
tests/: test_advanced.py  test_backends.py  test_broadcast.py  test_combine.py  test_combining.py  test_einsum.py  test_explanations.py  test_golden.py  test_indexing.py  test_layout.py  test_notebook.py  test_ops.py  test_polish.py  test_reductions.py  test_render_svg.py  test_renderers.py  test_reshaping.py  test_result_shape.py  test_shape.py  test_shapes.py  test_theme.py
