[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainbow-tensor"
version = "0.1.0"
description = "Visualise tensor shape, indexing, and slicing as SVG in Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zhixiang Feng", email = "contact@zhixiangfeng.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: IPython",
    "Framework :: Jupyter",
]
dependencies = [
    "numpy>=1.19.0",
    "ipython>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Niox1337/rainbow-tensor"

[tool.setuptools.packages.find]
where = ["src"]
